// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffHighlight does not highlight whole line 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": "aaa",
        "highlight": false,
      },
    ],
    "newNumber": 1,
    "oldNumber": 1,
    "position": 1,
    "type": "d2h-cntx",
  },
  Object {
    "content": Array [
      Object {
        "content": "bbb",
        "highlight": false,
      },
    ],
    "newNumber": null,
    "oldNumber": 2,
    "position": 2,
    "type": "d2h-del",
  },
  Object {
    "content": Array [
      Object {
        "content": "000",
        "highlight": false,
      },
    ],
    "newNumber": 2,
    "oldNumber": null,
    "position": 3,
    "type": "d2h-ins",
  },
  Object {
    "content": Array [
      Object {
        "content": "ccc",
        "highlight": false,
      },
    ],
    "newNumber": 3,
    "oldNumber": 3,
    "position": 4,
    "type": "d2h-cntx",
  },
]
`;

exports[`DiffHighlight highlights the beginning of a line 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": "aaa",
        "highlight": false,
      },
    ],
    "newNumber": 1,
    "oldNumber": 1,
    "position": 1,
    "type": "d2h-cntx",
  },
  Object {
    "content": Array [
      Object {
        "content": "b",
        "highlight": true,
      },
      Object {
        "content": "bb",
        "highlight": false,
      },
    ],
    "newNumber": null,
    "oldNumber": 2,
    "position": 2,
    "type": "d2h-del",
  },
  Object {
    "content": Array [
      Object {
        "content": "0",
        "highlight": true,
      },
      Object {
        "content": "bb",
        "highlight": false,
      },
    ],
    "newNumber": 2,
    "oldNumber": null,
    "position": 3,
    "type": "d2h-ins",
  },
  Object {
    "content": Array [
      Object {
        "content": "ccc",
        "highlight": false,
      },
    ],
    "newNumber": 3,
    "oldNumber": 3,
    "position": 4,
    "type": "d2h-cntx",
  },
]
`;

exports[`DiffHighlight highlights the end of a line 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": "aaa",
        "highlight": false,
      },
    ],
    "newNumber": 1,
    "oldNumber": 1,
    "position": 1,
    "type": "d2h-cntx",
  },
  Object {
    "content": Array [
      Object {
        "content": "bb",
        "highlight": false,
      },
      Object {
        "content": "b",
        "highlight": true,
      },
    ],
    "newNumber": null,
    "oldNumber": 2,
    "position": 2,
    "type": "d2h-del",
  },
  Object {
    "content": Array [
      Object {
        "content": "bb",
        "highlight": false,
      },
      Object {
        "content": "0",
        "highlight": true,
      },
    ],
    "newNumber": 2,
    "oldNumber": null,
    "position": 3,
    "type": "d2h-ins",
  },
  Object {
    "content": Array [
      Object {
        "content": "ccc",
        "highlight": false,
      },
    ],
    "newNumber": 3,
    "oldNumber": 3,
    "position": 4,
    "type": "d2h-cntx",
  },
]
`;

exports[`DiffHighlight highlights the middle of a line 1`] = `
Array [
  Object {
    "content": Array [
      Object {
        "content": "aaa",
        "highlight": false,
      },
    ],
    "newNumber": 1,
    "oldNumber": 1,
    "position": 1,
    "type": "d2h-cntx",
  },
  Object {
    "content": Array [
      Object {
        "content": "b",
        "highlight": false,
      },
      Object {
        "content": "b",
        "highlight": true,
      },
      Object {
        "content": "b",
        "highlight": false,
      },
    ],
    "newNumber": null,
    "oldNumber": 2,
    "position": 2,
    "type": "d2h-del",
  },
  Object {
    "content": Array [
      Object {
        "content": "b",
        "highlight": false,
      },
      Object {
        "content": "0",
        "highlight": true,
      },
      Object {
        "content": "b",
        "highlight": false,
      },
    ],
    "newNumber": 2,
    "oldNumber": null,
    "position": 3,
    "type": "d2h-ins",
  },
  Object {
    "content": Array [
      Object {
        "content": "ccc",
        "highlight": false,
      },
    ],
    "newNumber": 3,
    "oldNumber": 3,
    "position": 4,
    "type": "d2h-cntx",
  },
]
`;
